[package]
name = "cpuemulator"
version = "0.1.0"
edition = "2021"

[dependencies]
glium = {version = "0.35.0", default-features = true}
imgui = {version = "0.12.0", features = ["tables-api"]}
imgui-glium-renderer = "0.13.0"
imgui-winit-support = "0.13.0"
imgui-glow-renderer = "0.13.0"
imgui-sdl2-support = "0.13.0"
sdl2 = "0.37"
regex = "1.11.1"
copypasta = "0.10.2"
image = "0.25.8"
