[package]
name = "cpuemulator"
version = "0.1.0"
edition = "2021"

[dependencies]
glium = {version = "0.35.0", default-features = true}
imgui = { git = "https://github.com/imgui-rs/imgui-rs", version = "0.12", features = [
    "tables-api",
] }
# imgui = { version = "0.12", features = [
#     "tables-api",
# ] }
imgui-glium-renderer = { version = "0.13.0", git = "https://github.com/imgui-rs/imgui-glium-renderer" }
imgui-winit-support = { version = "0.13", git = "https://github.com/imgui-rs/imgui-winit-support" }
# imgui-glium-renderer = "0.13.0"
# imgui-winit-support = "0.13"
sdl2 = "0.37"
regex = "1.11.1"
copypasta = "0.10.2"
image = "0.25.8"
glutin-winit = "0.5.0"
